Fix misaligned identicon

--- a/src/components/common/Members/styles.module.css
+++ b/src/components/common/Members/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
+  padding-bottom: 2px;
 }
 
 .iconButton {
